update python and add readme
